--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -2,6 +2,7 @@ $background-color: #fff;
 
 $title-font-color: #262C40;
 $content-font-color: #8189A3;
+$error-font-color: #ff0000;
 
 $search-border-color: #D4DEFE;
 
